<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShootEmOff</string>
    <string name="ready">Tap the screen!</string>
    <string name="its_over">It`s over!</string>
    <string name="game_over">Time you just wasted on this game :</string>
    <string name="your_time">Best you got:</string>
    <string name="game_url">Shoot`Em Off</string>
    <string name="title_activity_start_screen">StartScreenActivity</string>
    <string name="action_settings">Settings</string>
    <string name="start_text">_Choose your option_</string>
    <string name="button_play">Start The Game</string>
    <string name="button_score">Score Board</string>
    <string name="button_settings">Game Settings</string>
    <string name="title_activity_game_over">GameOverActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_save_result">SaveResultActivity</string>
    <string name="preference_file_key">com.shootemoff.game.</string>
    <string name="title_activity_score_board">ScoreBoardActivity</string>
    <string name="score_board">Score Board</string>
    <string name="shared_preference_score_key">com.shootemoffgame.SHARED_PREFERENCE_KEY</string>
    <string name="saved_score_default">0</string>
    <string name="saved_score_name_default">default name</string>
    <string name="max_scores_saved">10</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="save_score">Save your score</string>
    <string name="username_hint">Enter username</string>
    
    <string name="first_install">first_install</string>
    <string name="use_default">use_default</string>
    <string name="use_custom">use_custom</string>

    <string-array name="scores_array">
        <item>score_1</item>
        <item>score_2</item>
        <item>score_3</item>
        <item>score_4</item>
        <item>score_5</item>
        <item>score_6</item>
        <item>score_7</item>
        <item>score_8</item>
        <item>score_9</item>
        <item>score_10</item>
    </string-array>
    
    <string-array name="score_names_array">
        <item>score_1_name</item>
        <item>score_2_name</item>
        <item>score_3_name</item>
        <item>score_4_name</item>
        <item>score_5_name</item>
        <item>score_6_name</item>
        <item>score_7_name</item>
        <item>score_8_name</item>
        <item>score_9_name</item>
        <item>score_10_name</item>
    </string-array>
    
    <string-array name="score_dates_array">
        <item>score_1_date</item>
        <item>score_2_date</item>
        <item>score_3_date</item>
        <item>score_4_date</item>
        <item>score_5_date</item>
        <item>score_6_date</item>
        <item>score_7_date</item>
        <item>score_8_date</item>
        <item>score_9_date</item>
        <item>score_10_date</item>
    </string-array>
    
    <string-array name="difficulty">
        <item>Level 1</item>
        <item>Level 2</item>
        <item>Level 3</item>
    </string-array>
    
    <string-array name="game_options">
        <item>custom_gun_reload_time</item>
        <item>custom_difficulty</item>
        <item>custom_lefty</item>
        <item>custom_vibration_on</item>
        <item>custom_sound_on</item>
    </string-array>

</resources>