<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameOverActivity"
    android:background="#4F0909" >

    <TextView
        android:id="@+id/game_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="111dp"
        android:layout_marginTop="32dp"
        android:textIsSelectable="true" />"

    <TextView
        android:id="@+id/game_over_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="34dp"
        android:text="@string/game_over" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/game_over_text"
        android:layout_below="@+id/game_score"
        android:layout_marginTop="64dp"
        android:hint="@string/username_hint"
        android:ems="10" >
        
    </EditText>

    <Button
        android:id="@+id/submit_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/username"
        android:layout_toRightOf="@+id/username"
        android:onClick="StoreScore"
        android:text="@string/save_score" />

</RelativeLayout>