<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartScreenActivity" 
    android:background="#4F0909">

    <TextView
        android:id="@+id/start_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/start_text" />
    
    <Button
        android:id="@+id/button_play"
        android:layout_width="fill_parent"
        android:layout_height="60sp"
        android:layout_marginTop="20sp"
        android:textColor="@color/start_screen_button"
        android:text="@string/button_play"
        android:onClick="StartGame" />
    
    <Button
        android:id="@+id/button_score"
        android:layout_width="fill_parent"
        android:layout_height="60sp"
        android:layout_marginTop="80sp"
        android:textColor="@color/start_screen_button"
        android:text="@string/button_score"
        android:onClick="ShowScoreBoard" />
    
    <Button
        android:id="@+id/button_course"
        android:layout_width="fill_parent"
        android:layout_height="60sp"
        android:layout_marginTop="140sp"
        android:textColor="@color/start_screen_button"
        android:text="@string/button_course" />


</RelativeLayout>